--- a/css/large.css
+++ b/css/large.css
@@ -1,4 +1,26 @@
 /* css for large devices e.g. desktop browser */
 body {
-	background-color: #ADD8E6;
+	/*background-color: #ADD8E6;*/
+	/*background: url('../images/b.png') repeat;*/
+	font-size: 1.2em;
+    line-height: 1.4em;
+}
+
+p {
+	max-width: 30em;
+}
+
+.content {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+    -moz-column-gap: 1em;
+    -webkit-column-gap: 1em;
+    column-gap: 1em;
+    -moz-column-width: 24em;
+    -webkit-column-width: 24em;
+    column-width: 24em;
+}
+img {
+	max-width: 24em;
 }
