--- a/css/medium.css
+++ b/css/medium.css
@@ -1,4 +1,22 @@
 /* css for medium devices e.g. ipad or other tablets */
 body {
-	background-color: #90EE90;
+	/*background-color: #90EE90;*/
+	/*background: url('../images/g.png') repeat;*/
+	font-size: 1.1em;
+    line-height: 1.4em;
+}
+p {
+	max-width: 30em;
+}
+.content {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    -moz-column-gap: 1em;
+    -webkit-column-gap: 1em;
+    column-gap: 1em;
+}
+
+img {
+	max-width: 26em;
 }
