--- a/css/large.css
+++ b/css/large.css
@@ -1,7 +1,5 @@
 /* css for large devices e.g. desktop browser */
 body {
-	/*background-color: #ADD8E6;*/
-	/*background: url('../images/b.png') repeat;*/
 	font-size: 1.2em;
     line-height: 1.4em;
 }
@@ -24,13 +22,13 @@ p {
 img {
 	max-width: 24em;
 }
-.sidebar-list-item {
-	width: 100%;
+.sidebar-list-item, .sidebar-list-category {
+	width: 90%;
 	border-bottom: 1px solid #242424;
     border-top: 1px solid #707070;
     display: block;
     min-height: 52px;
-    padding: 0 18px 0 0;
+    padding: 0 10% 0 0;
 }
 .item-image {
 	width: 40px;
@@ -41,7 +39,6 @@ img {
 .item-text {
 	margin: 4px 0 4px 44px;
 	color: white;
-    font-family: Verdana,sans-serif;
     font-size: 0.8em;
     line-height: 1em;
 }
