--- a/css/small.css
+++ b/css/small.css
@@ -1,14 +1,8 @@
 /* css for small devices e.g. iphone or other mobile phones */
 body {
-    /*background-color: #F08080;*/
-    background-color: #EEEEEE;
-    /*background: url('../images/r.png') repeat;*/
     font-size: 1em;
     line-height: 1.4em;
-    font-family: Georgia,serif;
-    color: #333333;
     /*text-indent: 1em;*/
-    
 }
 p {
 	max-width: 20em;
@@ -26,8 +20,11 @@ p {
 img {
 	max-width: 16em;
 }
-
-.sidebar-list-item {
+#mg-sidebar {
+	width: 40%;
+	left: -40%;	
+}
+.sidebar-list-item, .sidebar-list-category {
 	width: 100%;
 	border-bottom: 1px solid #242424;
     border-top: 1px solid #707070;
@@ -44,7 +41,6 @@ img {
 .item-text {
 	margin-left: 24px;
 	color: white;
-    font-family: Verdana,sans-serif;
     font-size: 0.6em;
     line-height: 0.9em;
 }
