--- a/css/medium.css
+++ b/css/medium.css
@@ -25,7 +25,7 @@ body {
     padding: 0 18px 0 0;
 }
 .item-image {
-	width: 40px;
+	width: 30px;
 	height: 40px;
 	margin: 6px;
 	float: left;
@@ -35,11 +35,12 @@ body {
 	color: white;
     font-family: Verdana,sans-serif;
     font-size: 0.8em;
-    line-height: 1em;
+    line-height: 1.2em;
+    height: 52px;
 }
 
 @media only screen and (orientation: portrait) {
-    img{
+    img, .image-text{
         max-width: 34em;
     }
     p {
@@ -55,7 +56,7 @@ body {
     }
 }
 @media only screen and (orientation: landscape) {
-    img{
+    img, .image-text{
         max-width: 46em;
     }
     p {
